fixed contact form closing if you click on form and added text cutoff for mobile view on about us

--- a/styles.css
+++ b/styles.css
@@ -327,6 +327,26 @@ body {
     bottom: 0;
     max-width: 564px;
     padding: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@media only screen and (max-width: 410px) {
+    .about-text {
+        /* position: relative; */
+        bottom: 20px;
+        height: 10.8em;
+    }
+    .about-text::after {
+        content: "";
+        text-align: right;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 70%;
+        height: 1.2em;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1) 50%);
+    }
 }
 
 .about {
@@ -480,7 +500,7 @@ body {
 #faq-section {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .faq-container {
@@ -564,6 +584,8 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
+    animation-name: modalopen;
+    animation-duration: 0.3s;
 }
 
 .modal-content {
@@ -574,6 +596,11 @@ hr {
     border-radius: 20px;
     margin: 30px;
     z-index: 9999;
+}
+
+@keyframes modalopen {
+    from { opacity: 0 }
+    to { opacity: 1 }
 }
 
 .modal-container {
